--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -22,44 +22,50 @@
     top: 75px;
     left: 0;
     z-index: -1;
-    background-image: image-set(
-      url("../img/about-desktop-1x.webp") type("image/webp"),
-      url("../img/about-desktop-1x.jpg") type("image/jpg"));
+    background-image: url("../img/about-desktop-1x.jpg");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/about-desktop-2x.webp") type("image/webp"),
-        url("../img/about-desktop-2x.jpg") type("image/jpg"));
-    }
+    background-image: webkit-image-set(
+        url("../img/about-desktop-2x.jpg") 2x,
+        url("../img/about-desktop-1x.jpg") 1x);
+
+    background-image: image-set(
+        url("../img/about-desktop-2x.webp") type("image/webp") 2x,
+        url("../img/about-desktop-1x.webp") type("image/webp") 1x,
+        url("../img/about-desktop-2x.jpg") type("image/jpg") 2x,
+        url("../img/about-desktop-1x.jpg") type("image/jpg") 1x);
 
     @include vp-1199 {
       width: 475px;
       height: 402px;
       top: 60px;
-      background-image: image-set(
-        url("../img/about-tablet-1x.webp") type("image/webp"),
-        url("../img/about-tablet-1x.jpg") type("image/jpg"));
+      background-image: url("../img/about-tablet-1x.jpg");
 
-      @include retina {
-        background-image: image-set(
-          url("../img/about-tablet-2x.webp") type("image/webp"),
-          url("../img/about-tablet-2x.jpg") type("image/jpg"));
-      }
+      background-image: webkit-image-set(
+          url("../img/about-tablet-2x.jpg") 2x,
+          url("../img/about-tablet-1x.jpg") 1x);
+
+      background-image: image-set(
+          url("../img/about-tablet-2x.webp") type("image/webp") 2x,
+          url("../img/about-tablet-1x.webp") type("image/webp") 1x,
+          url("../img/about-tablet-2x.jpg") type("image/jpg") 2x,
+          url("../img/about-tablet-1x.jpg") type("image/jpg") 1x);
     }
 
     @include vp-767 {
       width: 320px;
       height: 402px;
       top: -16px;
-      background-image: image-set(
-        url("../img/about-mobile-1x.webp") type("image/webp"),
-        url("../img/about-mobile-1x.jpg") type("image/jpg"));
+      background-image: url("../img/about-mobile-1x.jpg");
 
-      @include retina {
-        background-image: image-set(
-          url("../img/about-mobile-2x.webp") type("image/webp"),
-          url("../img/about-mobile-2x.jpg") type("image/jpg"));
-      }
+      background-image: webkit-image-set(
+          url("../img/about-mobile-2x.jpg") 2x,
+          url("../img/about-mobile-1x.jpg") 1x);
+
+      background-image: image-set(
+          url("../img/about-mobile-2x.webp") type("image/webp") 2x,
+          url("../img/about-mobile-1x.webp") type("image/webp") 1x,
+          url("../img/about-mobile-2x.jpg") type("image/jpg") 2x,
+          url("../img/about-mobile-1x.jpg") type("image/jpg") 1x);
     }
   }
 
@@ -73,15 +79,17 @@
     right: 0;
     top: -90px;
     z-index: -1;
-    background-image: image-set(
-      url("../img/clouds/clouds-3-1x.webp") type("image/webp"),
-      url("../img/clouds/clouds-3-1x.png") type("image/png"));
+    background-image: url("../img/clouds/clouds-3-1x.png");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/clouds/clouds-3-2x.webp") type("image/webp"),
-        url("../img/clouds/clouds-3-2x.png") type("image/png"));
-    }
+    background-image: webkit-image-set(
+        url("../img/clouds/clouds-3-2x.png") 2x,
+        url("../img/clouds/clouds-3-1x.png") 1x);
+
+    background-image: image-set(
+        url("../img/clouds/clouds-3-2x.webp") type("image/webp") 2x,
+        url("../img/clouds/clouds-3-1x.webp") type("image/webp") 1x,
+        url("../img/clouds/clouds-3-2x.png") type("image/png") 2x,
+        url("../img/clouds/clouds-3-1x.png") type("image/png") 1x);
 
     @include vp-1199 {
       display: none;
