--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -20,15 +20,17 @@
     left: 0;
     top: -170px;
     z-index: -1;
-    background-image: image-set(
-      url("../img/clouds/clouds-5-1x.webp") type("image/webp"),
-      url("../img/clouds/clouds-5-1x.png") type("image/png"));
+    background-image: url("../img/clouds/clouds-5-1x.png");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/clouds/clouds-5-2x.webp") type("image/webp"),
-        url("../img/clouds/clouds-5-2x.png") type("image/png"));
-    }
+    background-image: webkit-image-set(
+        url("../img/clouds/clouds-5-2x.png") 2x,
+        url("../img/clouds/clouds-5-1x.png") 1x);
+
+    background-image: image-set(
+        url("../img/clouds/clouds-5-2x.webp") type("image/webp") 2x,
+        url("../img/clouds/clouds-5-1x.webp") type("image/webp") 1x,
+        url("../img/clouds/clouds-5-2x.png") type("image/png") 2x,
+        url("../img/clouds/clouds-5-1x.png") type("image/png") 1x);
 
     @include vp-1199 {
       display: none;
@@ -45,15 +47,17 @@
     right: 0;
     top: 10px;
     z-index: -1;
-    background-image: image-set(
-      url("../img/clouds/clouds-4-1x.webp") type("image/webp"),
-      url("../img/clouds/clouds-4-1x.png") type("image/png"));
+    background-image: url("../img/clouds/clouds-4-1x.png");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/clouds/clouds-4-2x.webp") type("image/webp"),
-        url("../img/clouds/clouds-4-2x.png") type("image/png"));
-    }
+    background-image: webkit-image-set(
+        url("../img/clouds/clouds-4-2x.png") 2x,
+        url("../img/clouds/clouds-4-1x.png") 1x);
+
+    background-image: image-set(
+        url("../img/clouds/clouds-4-2x.webp") type("image/webp") 2x,
+        url("../img/clouds/clouds-4-1x.webp") type("image/webp") 1x,
+        url("../img/clouds/clouds-4-2x.png") type("image/png") 2x,
+        url("../img/clouds/clouds-4-1x.png") type("image/png") 1x);
 
     @include vp-1199 {
       display: none;
