--- a/source/sass/blocks/ask.scss
+++ b/source/sass/blocks/ask.scss
@@ -4,38 +4,44 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: image-set(
-    url("../img/form-background-desktop-1x.webp") type("image/webp"),
-    url("../img/form-background-desktop-1x.jpg") type("image/jpg"));
+  background-image: url("../img/form-background-desktop-1x.jpg");
 
-  @include retina {
-    background-image: image-set(
-      url("../img/form-background-desktop-2x.webp") type("image/webp"),
-      url("../img/form-background-desktop-2x.jpg") type("image/jpg"));
-  }
+  background-image: webkit-image-set(
+      url("../img/form-background-desktop-2x.jpg") 2x,
+      url("../img/form-background-desktop-1x.jpg") 1x);
+
+  background-image: image-set(
+      url("../img/form-background-desktop-2x.webp") type("image/webp") 2x,
+      url("../img/form-background-desktop-1x.webp") type("image/webp") 1x,
+      url("../img/form-background-desktop-2x.jpg") type("image/jpg") 2x,
+      url("../img/form-background-desktop-1x.jpg") type("image/jpg") 1x);
 
   @include vp-1199 {
-    background-image: image-set(
-      url("../img/form-background-tablet-1x.webp") type("image/webp"),
-      url("../img/form-background-tablet-1x.jpg") type("image/jpg"));
+    background-image: url("../img/form-background-tablet-1x.jpg");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/form-background-tablet-2x.webp") type("image/webp"),
-        url("../img/form-background-tablet-2x.jpg") type("image/jpg"));
-    }
+    background-image: webkit-image-set(
+        url("../img/form-background-tablet-2x.jpg") 2x,
+        url("../img/form-background-tablet-1x.jpg") 1x);
+
+    background-image: image-set(
+        url("../img/form-background-tablet-2x.webp") type("image/webp") 2x,
+        url("../img/form-background-tablet-1x.webp") type("image/webp") 1x,
+        url("../img/form-background-tablet-2x.jpg") type("image/jpg") 2x,
+        url("../img/form-background-tablet-1x.jpg") type("image/jpg") 1x);
   }
 
   @include vp-767 {
-    background-image: image-set(
-      url("../img/form-background-mobile-1x.webp") type("image/webp"),
-      url("../img/form-background-mobile-1x.jpg") type("image/jpg"));
+    background-image: url("../img/form-background-mobile-1x.jpg");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/form-background-mobile-2x.webp") type("image/webp"),
-        url("../img/form-background-mobile-2x.jpg") type("image/jpg"));
-    }
+    background-image: webkit-image-set(
+        url("../img/form-background-mobile-2x.jpg") 2x,
+        url("../img/form-background-mobile-1x.jpg") 1x);
+
+    background-image: image-set(
+        url("../img/form-background-mobile-2x.webp") type("image/webp") 2x,
+        url("../img/form-background-mobile-1x.webp") type("image/webp") 1x,
+        url("../img/form-background-mobile-2x.jpg") type("image/jpg") 2x,
+        url("../img/form-background-mobile-1x.jpg") type("image/jpg") 1x);
   }
 
   h2 {
