--- a/source/sass/blocks/education.scss
+++ b/source/sass/blocks/education.scss
@@ -349,7 +349,7 @@
   padding: 30px 30px 36px 0;
   display: flex;
   gap: 15px;
-  align-items: center;
+  align-items: flex-end;
   margin: auto 0;
   height: 100%;
 
@@ -410,8 +410,10 @@
     margin: 0;
     width: 30px;
     height: 30px;
+    margin-bottom: 10px;
 
     @include vp-1199 {
+      margin: 0;
       margin-top: 5px;
     }
 
