--- a/source/sass/blocks/hero-block.scss
+++ b/source/sass/blocks/hero-block.scss
@@ -21,110 +21,128 @@
   }
 
   &--сaucasus {
-    background-image: image-set(
-      url("../img/hero-block/background-1-desktop-1x.webp") type("image/webp"),
-      url("../img/hero-block/background-1-desktop-1x.jpg") type("image/jpg"));
+    background-image: url("../img/hero-block/background-1-desktop-1x.jpg");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/hero-block/background-1-desktop-2x.webp") type("image/webp"),
-        url("../img/hero-block/background-1-desktop-2x.jpg") type("image/jpg"));
-    }
+    background-image: webkit-image-set(
+        url("../img/hero-block/background-1-desktop-2x.jpg") 2x,
+        url("../img/hero-block/background-1-desktop-1x.jpg") 1x);
+
+    background-image: image-set(
+        url("../img/hero-block/background-1-desktop-2x.webp") type("image/webp") 2x,
+        url("../img/hero-block/background-1-desktop-1x.webp") type("image/webp") 1x,
+        url("../img/hero-block/background-1-desktop-2x.jpg") type("image/jpg") 2x,
+        url("../img/hero-block/background-1-desktop-1x.jpg") type("image/jpg") 1x);
 
     @include vp-1199 {
-      background-image: image-set(
-        url("../img/hero-block/background-1-tablet-1x.webp") type("image/webp"),
-        url("../img/hero-block/background-1-tablet-1x.jpg") type("image/jpg"));
+      background-image: url("../img/hero-block/background-1-tablet-1x.jpg");
 
-      @include retina {
-        background-image: image-set(
-          url("../img/hero-block/background-1-tablet-2x.webp") type("image/webp"),
-          url("../img/hero-block/background-1-tablet-2x.jpg") type("image/jpg"));
-      }
+      background-image: webkit-image-set(
+          url("../img/hero-block/background-1-tablet-2x.jpg") 2x,
+          url("../img/hero-block/background-1-tablet-1x.jpg") 1x);
+
+      background-image: image-set(
+          url("../img/hero-block/background-1-tablet-2x.webp") type("image/webp") 2x,
+          url("../img/hero-block/background-1-tablet-1x.webp") type("image/webp") 1x,
+          url("../img/hero-block/background-1-tablet-2x.jpg") type("image/jpg") 2x,
+          url("../img/hero-block/background-1-tablet-1x.jpg") type("image/jpg") 1x);
     }
 
     @include vp-767 {
-      background-image: image-set(
-        url("../img/hero-block/background-1-mobile-1x.webp") type("image/webp"),
-        url("../img/hero-block/background-1-mobile-1x.jpg") type("image/jpg"));
+      background-image: url("../img/hero-block/background-1-mobile-1x.jpg");
 
-      @include retina {
-        background-image: image-set(
-          url("../img/hero-block/background-1-mobile-2x.webp") type("image/webp"),
-          url("../img/hero-block/background-1-mobile-2x.jpg") type("image/jpg"));
-      }
+      background-image: webkit-image-set(
+          url("../img/hero-block/background-1-mobile-2x.jpg") 2x,
+          url("../img/hero-block/background-1-mobile-1x.jpg") 1x);
+
+      background-image: image-set(
+          url("../img/hero-block/background-1-mobile-2x.webp") type("image/webp") 2x,
+          url("../img/hero-block/background-1-mobile-1x.webp") type("image/webp") 1x,
+          url("../img/hero-block/background-1-mobile-2x.jpg") type("image/jpg") 2x,
+          url("../img/hero-block/background-1-mobile-1x.jpg") type("image/jpg") 1x);
     }
   }
 
   &--kamchatka {
-    background-image: image-set(
-      url("../img/hero-block/background-2-desktop-1x.webp") type("image/webp"),
-      url("../img/hero-block/background-2-desktop-1x.jpg") type("image/jpg"));
+    background-image: url("../img/hero-block/background-2-desktop-1x.jpg");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/hero-block/background-2-desktop-2x.webp") type("image/webp"),
-        url("../img/hero-block/background-2-desktop-2x.jpg") type("image/jpg"));
-    }
+    background-image: webkit-image-set(
+        url("../img/hero-block/background-2-desktop-2x.jpg") 2x,
+        url("../img/hero-block/background-2-desktop-1x.jpg") 1x);
+
+    background-image: image-set(
+        url("../img/hero-block/background-2-desktop-2x.webp") type("image/webp") 2x,
+        url("../img/hero-block/background-2-desktop-1x.webp") type("image/webp") 1x,
+        url("../img/hero-block/background-2-desktop-2x.jpg") type("image/jpg") 2x,
+        url("../img/hero-block/background-2-desktop-1x.jpg") type("image/jpg") 1x);
 
     @include vp-1199 {
-      background-image: image-set(
-        url("../img/hero-block/background-2-tablet-1x.webp") type("image/webp"),
-        url("../img/hero-block/background-2-tablet-1x.jpg") type("image/jpg"));
+      background-image: url("../img/hero-block/background-2-tablet-1x.jpg");
 
-      @include retina {
-        background-image: image-set(
-          url("../img/hero-block/background-2-tablet-2x.webp") type("image/webp"),
-          url("../img/hero-block/background-2-tablet-2x.jpg") type("image/jpg"));
-      }
+      background-image: webkit-image-set(
+          url("../img/hero-block/background-2-tablet-2x.jpg") 2x,
+          url("../img/hero-block/background-2-tablet-1x.jpg") 1x);
+
+      background-image: image-set(
+          url("../img/hero-block/background-2-tablet-2x.webp") type("image/webp") 2x,
+          url("../img/hero-block/background-2-tablet-1x.webp") type("image/webp") 1x,
+          url("../img/hero-block/background-2-tablet-2x.jpg") type("image/jpg") 2x,
+          url("../img/hero-block/background-2-tablet-1x.jpg") type("image/jpg") 1x);
     }
 
     @include vp-767 {
-      background-image: image-set(
-        url("../img/hero-block/background-2-mobile-1x.webp") type("image/webp"),
-        url("../img/hero-block/background-2-mobile-1x.jpg") type("image/jpg"));
+      background-image: url("../img/hero-block/background-2-mobile-1x.jpg");
 
-      @include retina {
-        background-image: image-set(
-          url("../img/hero-block/background-2-mobile-2x.webp") type("image/webp"),
-          url("../img/hero-block/background-2-mobile-2x.jpg") type("image/jpg"));
-      }
+      background-image: webkit-image-set(
+          url("../img/hero-block/background-2-mobile-2x.jpg") 2x,
+          url("../img/hero-block/background-2-mobile-1x.jpg") 1x);
+
+      background-image: image-set(
+          url("../img/hero-block/background-2-mobile-2x.webp") type("image/webp") 2x,
+          url("../img/hero-block/background-2-mobile-1x.webp") type("image/webp") 1x,
+          url("../img/hero-block/background-2-mobile-2x.jpg") type("image/jpg") 2x,
+          url("../img/hero-block/background-2-mobile-1x.jpg") type("image/jpg") 1x);
     }
   }
 
   &--altai {
-    background-image: image-set(
-      url("../img/hero-block/background-3-desktop-1x.webp") type("image/webp"),
-      url("../img/hero-block/background-3-desktop-1x.jpg") type("image/jpg"));
+    background-image: url("../img/hero-block/background-3-desktop-1x.jpg");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/hero-block/background-3-desktop-2x.webp") type("image/webp"),
-        url("../img/hero-block/background-3-desktop-2x.jpg") type("image/jpg"));
-    }
+    background-image: webkit-image-set(
+        url("../img/hero-block/background-3-desktop-2x.jpg") 2x,
+        url("../img/hero-block/background-3-desktop-1x.jpg") 1x);
+
+    background-image: image-set(
+        url("../img/hero-block/background-3-desktop-2x.webp") type("image/webp") 2x,
+        url("../img/hero-block/background-3-desktop-1x.webp") type("image/webp") 1x,
+        url("../img/hero-block/background-3-desktop-2x.jpg") type("image/jpg") 2x,
+        url("../img/hero-block/background-3-desktop-1x.jpg") type("image/jpg") 1x);
 
     @include vp-1199 {
-      background-image: image-set(
-        url("../img/hero-block/background-3-tablet-1x.webp") type("image/webp"),
-        url("../img/hero-block/background-3-tablet-1x.jpg") type("image/jpg"));
+      background-image: url("../img/hero-block/background-3-tablet-1x.jpg");
 
-      @include retina {
-        background-image: image-set(
-          url("../img/hero-block/background-3-tablet-2x.webp") type("image/webp"),
-          url("../img/hero-block/background-3-tablet-2x.jpg") type("image/jpg"));
-      }
+      background-image: webkit-image-set(
+          url("../img/hero-block/background-3-tablet-2x.jpg") 2x,
+          url("../img/hero-block/background-3-tablet-1x.jpg") 1x);
+
+      background-image: image-set(
+          url("../img/hero-block/background-3-tablet-2x.webp") type("image/webp") 2x,
+          url("../img/hero-block/background-3-tablet-1x.webp") type("image/webp") 1x,
+          url("../img/hero-block/background-3-tablet-2x.jpg") type("image/jpg") 2x,
+          url("../img/hero-block/background-3-tablet-1x.jpg") type("image/jpg") 1x);
     }
 
     @include vp-767 {
-      background-image: image-set(
-        url("../img/hero-block/background-3-mobile-1x.webp") type("image/webp"),
-        url("../img/hero-block/background-3-mobile-1x.jpg") type("image/jpg"));
+      background-image: url("../img/hero-block/background-3-mobile-1x.jpg");
 
-      @include retina {
-        background-image: image-set(
-          url("../img/hero-block/background-3-mobile-2x.webp") type("image/webp"),
-          url("../img/hero-block/background-3-mobile-2x.jpg") type("image/jpg"));
-      }
+      background-image: webkit-image-set(
+          url("../img/hero-block/background-3-mobile-2x.jpg") 2x,
+          url("../img/hero-block/background-3-mobile-1x.jpg") 1x);
+
+      background-image: image-set(
+          url("../img/hero-block/background-3-mobile-2x.webp") type("image/webp") 2x,
+          url("../img/hero-block/background-3-mobile-1x.webp") type("image/webp") 1x,
+          url("../img/hero-block/background-3-mobile-2x.jpg") type("image/jpg") 2x,
+          url("../img/hero-block/background-3-mobile-1x.jpg") type("image/jpg") 1x);
     }
   }
 }
