--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -163,8 +163,8 @@
     margin-left: -5px;
     padding-top: 24px;
     padding-bottom: 40px;
-    max-height: 450px;
     overflow: auto;
+    max-height: calc(100vh - 110px);
   }
 
   @include vp-767 {
@@ -172,7 +172,7 @@
     padding-bottom: 50px;
     margin-left: -6px;
     gap: 22px;
-    max-height: 400px;
+    max-height: calc(100vh - 69px);
   }
 }
 
@@ -279,6 +279,7 @@
     @include vp-1199 {
       background-color: $color-default-white;
       color: $color-elephant;
+      max-height: 100vh;
     }
   }
 
