--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -12,15 +12,17 @@
     left: 0;
     bottom: -69;
     z-index: -1;
-    background-image: image-set(
-      url("../img/clouds/clouds-2-1x.webp") type("image/webp"),
-      url("../img/clouds/clouds-2-1x.png") type("image/png"));
+    background-image: url("../img/clouds/clouds-2-1x.png");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/clouds/clouds-2-2x.webp") type("image/webp"),
-        url("../img/clouds/clouds-2-2x.png") type("image/png"));
-    }
+    background-image: webkit-image-set(
+        url("../img/clouds/clouds-2-2x.png") 2x,
+        url("../img/clouds/clouds-2-1x.png") 1x);
+
+    background-image: image-set(
+        url("../img/clouds/clouds-2-2x.webp") type("image/webp") 2x,
+        url("../img/clouds/clouds-2-1x.webp") type("image/webp") 1x,
+        url("../img/clouds/clouds-2-2x.png") type("image/png") 2x,
+        url("../img/clouds/clouds-2-1x.png") type("image/png") 1x);
 
     @include vp-1199 {
       display: none;
@@ -37,44 +39,50 @@
     right: 0;
     top: -19px;
     z-index: -1;
-    background-image: image-set(
-      url("../img/clouds/clouds-1-desktop-1x.webp") type("image/webp"),
-      url("../img/clouds/clouds-1-desktop-1x.png") type("image/png"));
+    background-image: url("../img/clouds/clouds-1-desktop-1x.png");
 
-    @include retina {
-      background-image: image-set(
-        url("../img/clouds/clouds-1-desktop-2x.webp") type("image/webp"),
-        url("../img/clouds/clouds-1-desktop-2x.png") type("image/png"));
-    }
+    background-image: webkit-image-set(
+        url("../img/clouds/clouds-1-desktop-2x.png") 2x,
+        url("../img/clouds/clouds-1-desktop-1x.png") 1x);
+
+    background-image: image-set(
+        url("../img/clouds/clouds-1-desktop-2x.webp") type("image/webp") 2x,
+        url("../img/clouds/clouds-1-desktop-1x.webp") type("image/webp") 1x,
+        url("../img/clouds/clouds-1-desktop-2x.png") type("image/png") 2x,
+        url("../img/clouds/clouds-1-desktop-1x.png") type("image/png") 1x);
 
     @include vp-1199 {
       top: -93px;
       width: 294px;
       height: 1364px;
-      background-image: image-set(
-          url("../img/clouds/clouds-1-tablet-1x.webp") type("image/webp"),
-          url("../img/clouds/clouds-1-tablet-1x.png") type("image/png"));
+      background-image: url("../img/clouds/clouds-1-tablet-1x.png");
 
-      @include retina {
-        background-image: image-set(
-            url("../img/clouds/clouds-1-tablet-2x.webp") type("image/webp"),
-            url("../img/clouds/clouds-1-tablet-2x.png") type("image/png"));
-      }
+      background-image: webkit-image-set(
+          url("../img/clouds/clouds-1-tablet-2x.png") 2x,
+          url("../img/clouds/clouds-1-tablet-1x.png") 1x);
+
+      background-image: image-set(
+          url("../img/clouds/clouds-1-tablet-2x.webp") type("image/webp") 2x,
+          url("../img/clouds/clouds-1-tablet-1x.webp") type("image/webp") 1x,
+          url("../img/clouds/clouds-1-tablet-2x.png") type("image/png") 2x,
+          url("../img/clouds/clouds-1-tablet-1x.png") type("image/png") 1x);
     }
 
     @include vp-767 {
       top: 137px;
       width: 176px;
       height: 595px;
-      background-image: image-set(
-          url("../img/clouds/clouds-1-mobile-1x.webp") type("image/webp"),
-          url("../img/clouds/clouds-1-mobile-1x.png") type("image/png"));
+      background-image: url("../img/clouds/clouds-1-mobile-1x.png");
 
-      @include retina {
-        background-image: image-set(
-            url("../img/clouds/clouds-1-mobile-2x.webp") type("image/webp"),
-            url("../img/clouds/clouds-1-mobile-2x.png") type("image/png"));
-      }
+      background-image: webkit-image-set(
+          url("../img/clouds/clouds-1-mobile-2x.png") 2x,
+          url("../img/clouds/clouds-1-mobile-1x.png") 1x);
+
+      background-image: image-set(
+          url("../img/clouds/clouds-1-mobile-2x.webp") type("image/webp") 2x,
+          url("../img/clouds/clouds-1-mobile-1x.webp") type("image/webp") 1x,
+          url("../img/clouds/clouds-1-mobile-2x.png") type("image/png") 2x,
+          url("../img/clouds/clouds-1-mobile-1x.png") type("image/png") 1x);
     }
   }
 }
